testdata/baselines/reference/submodule/conformance/jsdocTypeTagParameterType.errors.txt
a.js(2,12): error TS7006: Parameter 'value' implicitly has an 'any' type.
a.js(6,12): error TS7006: Parameter 's' implicitly has an 'any' type.


==== a.js (2 errors) ====
    /** @type {function(string): void} */
    const f = (value) => {
               ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
        value = 1 // should error
    };
    /** @type {(s: string) => void} */
    function g(s) {
               ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
        s = 1 // Should error
    }
    